[package]
name = "otteum_studio_demo"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true

[dependencies]
actix-files = { version = "0.6.6", optional = true }
actix-web = { version = "4.8", optional = true, features = ["macros"] }
broadcaster = "1.0"
console_log = "1.0"
console_error_panic_hook = "0.1.7"
futures = "0.3.30"
leptos = { git = "https://github.com/leptos-rs/leptos.git", tag = "v0.6.0" }
leptos_actix = { git = "https://github.com/leptos-rs/leptos.git", rev = "...", optional = true }
leptos_router = { path = "../../router" }
log = "0.4.22"
gloo-net = { version = "0.6.0" }
wasm-bindgen = "0.2.93"
serde = { version = "1.0", features = ["derive"] }
simple_logger = "5.0"
tracing = { version = "0.1.40", optional = true }
send_wrapper = "0.6.0"

[features]
hydrate = ["leptos/hydrate"]
ssr = [
  "dep:actix-files",
  "dep:actix-web",
  "dep:tracing",
  "leptos/ssr",
  "leptos_actix",
  "leptos_router/ssr",
]
csr = []

[package.metadata.cargo-all-features]
denylist = ["actix-files", "actix-web", "leptos_actix"]
skip_feature_sets = [["ssr", "hydrate"], []]

[package.metadata.leptos]
output-name = "counter_isomorphic"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]

bin-default-features = false

lib-features = ["hydrate"]

lib-default-features = false
