[package]
name = "otteum_studio_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["serde", "nightly"] }
leptos_axum = { version = "0.6", optional = true }
axum = { version = "0.7", optional = true, features = ["macros"] }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["ssr"]
ssr = ["leptos/ssr", "leptos_axum", "axum", "tokio", "tower", "tower-http"]
hydrate = ["leptos/hydrate"]
csr = ["leptos/csr"]

[package.metadata.leptos]
# Adjust these paths if your app structure differs
app-name = "otteum_studio_demo"
src-dir = "src"
site-root = "site"
site-pkg-dir = "pkg"
bin-dir = "bin"
style-file = "style.css"
